--- a/style/layout.css
+++ b/style/layout.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
 *,
 *::after,
 *::before {
@@ -10,14 +8,10 @@
 }
 
 :root {
-  --primary-color: #7854f7;
-  --dark-color: #181131;
-  --accent-color: #d57d00;
-  --light-color: #f7f7f7;
-  --secondary-color: #515151;
-  --border-raduis-sm: 0.5rem;
-  --border-raduis-md: 1rem;
-  --border-raduis-lg: 1.5rem;
+  --primary-color: #0e0116;
+  --dark-color: #07050e;
+  --accent-color: rgb(149, 80, 229);
+  --light-color: #f3f3f3;
 }
 
 html {
@@ -28,12 +22,7 @@ html {
 
 body {
   font-size: 1.5rem;
-  background: linear-gradient(
-    141deg,
-    rgb(31, 20, 63) 0%,
-    #201738 51%,
-    #2b0047 75%
-  );
+  background: linear-gradient(141deg, rgb(18, 11, 37) 0%, #0e0116 75%);
 }
 
 button {
@@ -75,7 +64,7 @@ a {
 
 .btn__primary:hover {
   background: transparent;
-  color: var(--dark-color);
+  color: var(--light-color);
 
-  box-shadow: inset 0 0 0 0.2rem var(--primary-color);
+  box-shadow: inset 0 0 0 0.1rem var(--light-color);
 }
