--- a/style/navbar.css
+++ b/style/navbar.css
@@ -24,21 +24,21 @@
 .navbar__menu--item {
   color: var(--light-color);
   cursor: pointer;
-  margin-left: 1rem;
-  margin-right: 2rem;
+  margin-inline-start: 1rem;
+  margin-inline-end: 2rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
 .navbar__menu--item i {
-  margin-left: 0.8rem;
+  margin-inline-start: 0.8rem;
   font-size: 1.5rem;
 }
 
 .navbar__search {
   color: var(--light-color);
-  margin-left: 2rem;
+  margin-inline-start: 2rem;
   cursor: pointer;
   font-size: 2rem;
 }
