--- a/style/footer.css
+++ b/style/footer.css
@@ -27,3 +27,68 @@
   align-items: space-around;
   margin: 0 5rem;
 }
+
+.footer__links > * {
+  margin: 2rem 0;
+  color: rgb(99, 99, 99);
+}
+
+.footer__links h4 {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 0 0 5rem;
+}
+
+.subscribe h4 {
+  color: #fff;
+  font-size: 2rem;
+}
+
+.email {
+  margin: 5rem 0 5rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#email {
+  min-height: 5rem;
+  padding: 2.5rem 5rem 2.5rem 1rem;
+  background-color: var(--primary-color);
+  border: 1px solid rgb(99, 99, 99);
+  border-radius: 1rem 0 0 1rem;
+  color: #fff;
+}
+
+.submit {
+  padding: 1.5rem 2rem 1.5rem 1.5rem;
+  border-radius: 0 1rem 1rem 0;
+  background-color: rgb(81, 66, 251);
+  color: #fff;
+  font-size: 3rem;
+  border: 1px solid rgb(99, 99, 99);
+}
+
+.social {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.social > * {
+  font-size: 2rem;
+  padding: 1rem;
+  margin: 0.3rem;
+  background-color: rgb(99, 99, 99);
+  border-radius: 1rem;
+  cursor: pointer;
+}
