--- a/style/layout.css
+++ b/style/layout.css
@@ -18,7 +18,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "montserrat", "Helvetica Neue", "Helvetica";
   scroll-behavior: smooth;
 }
 
