--- a/style/auctions.css
+++ b/style/auctions.css
@@ -7,14 +7,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  /* background-color: rgb(49, 37, 71); */
 }
 
 .auctions__title {
   display: flex;
   flex-direction: row;
   padding: 1rem 2rem 0.5rem 2rem;
-  background-color: rgb(49, 37, 71);
+  background-color: var(--secondary-background-color);
   border-radius: 1rem 1rem 0 0;
 }
 
@@ -27,7 +26,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: rgb(49, 37, 71);
+  background-color: var(--secondary-background-color);
   border-radius: 1.5rem;
 }
 
@@ -56,7 +55,7 @@
   align-items: center;
   margin: 5rem;
   color: var(--light-color);
-  background-color: rgb(76, 70, 87);
+  background-color: var(--card-background-color);
   padding: 2rem 1rem;
   border-radius: 2rem;
   transition: all 0.2s linear;
@@ -158,7 +157,7 @@
 
 .slider {
   padding: 0.5rem 2rem 1rem 2rem;
-  background-color: rgb(49, 37, 71);
+  background-color: var(--secondary-background-color);
   border-radius: 0 0 1rem 1rem;
 }
 
