--- a/style/footer.css
+++ b/style/footer.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: space-around;
-  color: rgb(99, 99, 99);
+  color: var(--font-accent-color);
   max-width: 20rem;
   margin: 2rem;
 }
@@ -30,7 +30,7 @@
 
 .footer__links > * {
   margin: 2rem 0;
-  color: rgb(99, 99, 99);
+  color: var(--font-accent-color);
 }
 
 .footer__links h4 {
@@ -74,7 +74,7 @@
   background-color: rgb(81, 66, 251);
   color: #fff;
   font-size: 3rem;
-  border: 1px solid rgb(99, 99, 99);
+  border: 1px solid var(--font-accent-color);
 }
 
 .social {
@@ -88,7 +88,7 @@
   font-size: 2rem;
   padding: 1rem;
   margin: 0.3rem;
-  background-color: rgb(99, 99, 99);
+  background-color: var(--font-accent-color);
   border-radius: 1rem;
   cursor: pointer;
 }
