--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,5 +1,6 @@
 #navbar {
   min-height: 10vh;
+  position: sticky;
 }
 
 .navbar__logo img {
@@ -12,7 +13,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  border-block-end: 0.1rem solid grey;
+  border-block-end: 0.1rem solid var(--secondary-background-color);
   position: sticky;
 }
 
@@ -49,10 +50,19 @@
 .navbar__wallet {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn__walelt {
-  display: inline-block;
+.btn__wallet {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn__wallet > * {
+  margin: 0 0.5rem 0 0;
 }
 
 .navbar--modes {
