--- a/style/auctions.css
+++ b/style/auctions.css
@@ -34,7 +34,8 @@
   content: url(../assets/axies-images/03_Live\ Auctions/circle-chevron-left-solid.svg);
   cursor: pointer;
   display: inline-block;
-  min-width: 10rem;
+  min-width: 5rem;
+  max-width: 10rem;
   position: relative;
   left: 2rem;
 }
@@ -43,7 +44,8 @@
   content: url(../assets/axies-images/03_Live\ Auctions/circle-chevron-right-solid.svg);
   cursor: pointer;
   display: inline-block;
-  min-width: 10rem;
+  min-width: 5rem;
+  max-width: 10rem;
   position: relative;
   left: -2rem;
 }
@@ -163,9 +165,10 @@
 
 .explore {
   position: relative;
-  font-size: 2.5rem;
-  left: 32%;
+  /* font-size: 2.5rem; */
+  left: 50rem;
   max-width: 15rem;
+  top: -3.5rem;
 }
 
 .bid {
@@ -191,11 +194,11 @@
   color: black;
 }
 
-.bid:hover {
-  opacity: 1;
-}
-
 .auctions__item:hover {
   transform: translateY(-2rem);
   box-shadow: 0.5rem 3em 10rem 1rem rgba(0, 0, 0, 0.8);
+}
+
+.auctions__item:hover .bid {
+  opacity: 1;
 }
