--- a/style/footer.css
+++ b/style/footer.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   margin: 10rem 0;
+  background-color: var(--secondary-background-color);
 }
 
 .footer__logo {
@@ -17,7 +18,8 @@
 }
 
 .footer__logo img {
-  max-width: 12rem;
+  max-width: 15rem;
+  margin: 0rem 0 3rem 0;
 }
 
 .footer__links {
@@ -25,7 +27,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: space-around;
-  margin: 0 5rem;
+  margin: 3rem 5rem;
 }
 
 .footer__links > * {
