--- a/style/today.css
+++ b/style/today.css
@@ -7,6 +7,20 @@
 
 .today__title {
   color: #fff;
+  background-color: var(--secondary-background-color);
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  margin: 0;
+  font-size: 2.5rem;
+}
+
+.today__monster {
+  max-height: 2rem;
+  position: relative;
+  top: 20rem;
+  z-index: -1;
+  opacity: 0.4;
+  animation: monster2 10s linear infinite;
 }
 
 .today__sort {
@@ -25,6 +39,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 1rem;
 }
 
 .category i,
