--- a/style/collection.css
+++ b/style/collection.css
@@ -14,7 +14,7 @@
 }
 
 .collection__title h2 {
-  color: #fff;
+  color: var(--light-font-color);
   padding: 1rem 2rem;
   margin: 0 0 1rem 0;
   border-radius: 4rem;
@@ -46,8 +46,8 @@
 }
 
 .collection__img--1 {
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-2.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
@@ -58,8 +58,8 @@
 
 .collection__img--2 {
   background-image: url(../assets/axies-images/06_Popular\ Collection/box2/img-collection24.jpg);
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -75,8 +75,8 @@
 }
 
 .collection__img--3 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-bottom-4.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
@@ -86,8 +86,8 @@
 }
 
 .collection__img--4 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -97,8 +97,8 @@
 }
 
 .collection__img--5 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -108,8 +108,8 @@
 }
 
 .collection__img--6 {
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-2.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
@@ -120,8 +120,8 @@
 
 .collection__img--7 {
   background-image: url(../assets/axies-images/06_Popular\ Collection/box2/img-collection24.jpg);
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -130,8 +130,8 @@
 }
 
 .collection__img--8 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-bottom-4.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
@@ -141,8 +141,8 @@
 }
 
 .collection__img--9 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -152,8 +152,8 @@
 }
 
 .collection__img--10 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -163,8 +163,8 @@
 }
 
 .collection__img--11 {
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-2.jpg);
   margin: 2rem 0rem 1rem 2rem;
   background-repeat: no-repeat;
@@ -175,8 +175,8 @@
 
 .collection__img--12 {
   background-image: url(../assets/axies-images/06_Popular\ Collection/box2/img-collection24.jpg);
-  min-width: 18rem;
-  min-height: 15rem;
+  min-width: 20rem;
+  min-height: 17rem;
   margin: 2rem 2rem 0rem 1rem;
   background-repeat: no-repeat;
   background-position: center;
@@ -185,8 +185,8 @@
 }
 
 .collection__img--13 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-bottom-4.jpg);
   margin: 2rem 0rem 1rem 1.5rem;
   background-repeat: no-repeat;
@@ -196,8 +196,8 @@
 }
 
 .collection__img--14 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-1.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -207,8 +207,8 @@
 }
 
 .collection__img--15 {
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 13rem;
+  min-height: 13rem;
   background-image: url(../assets/axies-images/06_Popular\ Collection/box1/collection-item-top-2.jpg);
   margin: 2rem 0rem 1rem 1rem;
   background-repeat: no-repeat;
@@ -253,4 +253,9 @@
 
 .collection__creator--name {
   color: #fff;
+}
+
+.explore-collection {
+  position: relative;
+  top: 2rem;
 }
