--- a/style/footer.css
+++ b/style/footer.css
@@ -1,10 +1,13 @@
+footer {
+  background-color: var(--secondary-background-color);
+}
+
 .footer__wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 10rem 0;
-  background-color: var(--secondary-background-color);
+  margin: 10rem 0 0 0;
 }
 
 .footer__logo {
