--- a/style/hero.css
+++ b/style/hero.css
@@ -17,6 +17,7 @@
   justify-content: space-around;
   align-items: space-around;
   margin-block-start: 10rem;
+  margin: 0rem 5rem;
 }
 
 .word-monster {
@@ -71,7 +72,7 @@
 .hero__plus--2 {
   position: relative;
   transform: rotate(45deg);
-  transition: transform 0.3;
+  transition: transform 0.3s;
   animation: plus--2 infinite 30s ease-in-out backwards;
   left: 2rem;
 }
@@ -88,10 +89,9 @@
 .hero__plus--4 {
   position: relative;
   transform: rotate(45deg);
-  transition: transform 0.3;
   animation: plus--2 infinite 10s linear backwards;
-  left: -30rem;
-  top: -20rem;
+  left: 5rem;
+  top: -12rem;
   min-height: 12rem;
 }
 
@@ -158,7 +158,7 @@
 .hero__star--2 {
   min-height: 6rem;
   position: relative;
-  left: -40rem;
+  left: -18rem;
   top: -29rem;
   animation: star infinite 8s linear;
 }
@@ -220,12 +220,12 @@
 }
 
 .hero__menu {
-  color: #fff;
+  color: var(--light-font-color);
   display: flex;
   flex-direction: column;
   justify-items: center;
   align-items: center;
-  margin: 7rem 0.5rem 45rem 5rem;
+  margin: 9rem 2rem 45rem 5rem;
   transition: transform 0.2s linear;
 }
 
