--- a/style/seller.css
+++ b/style/seller.css
@@ -12,6 +12,7 @@
   padding: 1rem 2rem;
   border-radius: 3rem;
   font-size: 2rem;
+  margin: 0 0 2rem 0;
 }
 
 .seller__text {
@@ -69,5 +70,10 @@
 }
 
 .seller__card:hover .seller__avatar {
-  transform: rotate(5deg) translateY(-1rem);
+  transform: rotate(5deg) translateY(-1.5rem);
+}
+
+.seller__card:hover {
+  box-shadow: 0.5rem 0.3rem 3rem 1rem var(--accent-color);
+  border-radius: 2rem;
 }
