--- a/style/home/layout.css
+++ b/style/home/layout.css
@@ -46,6 +46,7 @@ html {
   font-size: 62.5%;
   font-family: "montserrat", "Helvetica Neue", "Helvetica";
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -125,10 +126,13 @@ a {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  padding: 1rem;
+  padding: 1rem 1rem;
   position: relative;
   top: 0.5rem;
   cursor: pointer;
+  background-color: var(--dark-color);
+  border-radius: 1rem;
+  max-width: 8rem;
 }
 
 .likes i {
