--- a/style/home/today.css
+++ b/style/home/today.css
@@ -1,5 +1,5 @@
 #today {
-  margin: 15rem 0 0 0;
+  margin: 15rem 0 15rem 0;
 }
 .today__wrapper {
   display: flex;
@@ -111,7 +111,7 @@
 }
 
 .today__wrapper--1 {
-  background-image: url(../assets/axies-images/03_Live\ Auctions/card-item8.jpg);
+  background-image: url(../../assets/axies-images/03_Live\ Auctions/card-item8.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -126,7 +126,7 @@
 }
 
 .today__wrapper--2 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-2.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-2.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -141,7 +141,7 @@
 }
 
 .today__wrapper--3 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-3.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-3.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -156,7 +156,7 @@
 }
 
 .today__wrapper--4 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-4.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-4.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -171,7 +171,7 @@
 }
 
 .today__wrapper--5 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-7.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-7.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -186,7 +186,7 @@
 }
 
 .today__wrapper--6 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-9.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-9.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -201,7 +201,7 @@
 }
 
 .today__wrapper--7 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/image-box-11.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/image-box-11.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -216,7 +216,7 @@
 }
 
 .today__wrapper--8 {
-  background-image: url(../assets/axies-images/05_Todays\ Picks/card-item-2.jpg);
+  background-image: url(../../assets/axies-images/05_Todays\ Picks/card-item-2.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
